# GuardStrike

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  SKILL.md  docker-compose.yml  guardstrike.bat  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
config/: guardstrike.yaml
docs/: DOCKER.md  EVAL_GUIDE.md  MCP_GUIDE.md  PLUGIN_GUIDE.md  README.md  TOOLS_DEVELOPMENT_GUIDE.md  V4_FEATURES.md  WORKFLOW_GUIDE.md
evals/: __init__.py  fixtures_loader.py  scoring.py  test_analyst_grounding.py  test_parser_fixtures.py  test_workflow_integration.py
evals/datasets/: analyst_grounding_seed.jsonl
evals/fixtures/httpx/: three_urls.expected.json  three_urls.input.txt
evals/fixtures/nuclei/: two_findings.expected.json  two_findings.input.txt
evals/fixtures/subfinder/: three_subs.expected.json  three_subs.input.txt
evals/fixtures/trivy/: two_cves.expected.json  two_cves.input.txt
src/guardstrike/: __init__.py  __main__.py
src/guardstrike/ai/: __init__.py  ai_client.py  budget.py  gemini_client.py
src/guardstrike/ai/prompt_templates/: __init__.py  analyst.py  debate.py  planner.py  reporter.py  tool_selector.py  visual_triage.py
src/guardstrike/ai/providers/: __init__.py  antigravity_provider.py  base_provider.py  claude_provider.py  gemini_provider.py  nine_router_provider.py  ollama_provider.py  openai_compatible_provider.py  openai_provider.py  openrouter_provider.py  requesty_provider.py
src/guardstrike/cli/: __init__.py  main.py
src/guardstrike/cli/commands/: __init__.py  ai_explain.py  analyze.py  cache.py  config_cmd.py  init.py  kb.py  mcp.py  models.py  recon.py  report.py  scan.py  telemetry.py  tools.py  workflow.py
src/guardstrike/core/: __init__.py  agent.py  analyst_agent.py  chains.py  cvss_calculator.py  dedup.py  exploit_intel.py  exploitability.py  knowledge_base.py  memory.py  planner.py  ranking.py  reporter_agent.py  schemas.py  telemetry.py  tool_agent.py  tool_cache.py  tool_meta.py  tool_recovery.py  workflow_schema.py
src/guardstrike/core/agents/: __init__.py  debate_triage.py  visual_triage.py
src/guardstrike/core/exporters/: __init__.py  defectdojo.py  (+3 more)
src/guardstrike/data/: guardstrike.yaml
src/guardstrike/mcp/: __init__.py  handlers.py  server.py
src/guardstrike/tools/: README.md  __init__.py  amass.py  apkleaks.py  arjun.py  base_tool.py  bloodhound.py  burp_api.py  cariddi.py  clairvoyance.py  cmseek.py  crackmapexec.py  dependency_check.py  dnsrecon.py  ffuf.py  garak.py  gitleaks.py  gobuster.py  graphw00f.py  grype.py  httpx.py  impacket_secretsdump.py  jwt_tool.py  kerbrute.py  kube_bench.py  masscan.py  mobsf.py  netexec.py  nikto.py  nmap.py  nuclei.py  objection_runtime.py  playwright_screenshot.py  prompt_fuzz.py  prowler.py  pyrit.py  restler.py  schemathesis.py  scoutsuite.py  semgrep.py  (+14 more)
src/guardstrike/utils/: __init__.py  helpers.py  logger.py  resources.py  sanitize.py  scope_validator.py
src/guardstrike/workflows/: ad_assessment.yaml  advanced_recon.yaml  api_pentest_v2.yaml  api_security_test.yaml  cloud_audit.yaml  cms_pentest.yaml  container_audit.yaml  full_vuln_scan.yaml  graphql_pentest.yaml  jwt_audit.yaml  llm_redteam.yaml  mobile_android.yaml  osint.yaml  sast_review.yaml  sbom_scan.yaml  web_auth_security.yaml  web_full_assessment.yaml  web_pentest.yaml  web_pentest_with_debate.yaml  web_quick_scan.yaml  web_visual_pentest.yaml  wordpress_audit.yaml
tests/: __init__.py  conftest.py  test_9router_provider.py  test_ai_budget.py  test_ai_fallback.py  test_antigravity_provider.py  test_base_tool.py  test_cache_cli.py  test_chains.py  test_cli_banner.py  test_cli_config_show.py  test_cli_session_paths.py  test_cli_tools.py  test_cvss_calculator.py  test_debate_triage.py  test_dedup.py  test_eval_scoring.py  test_exploit_intel.py  test_exploitability.py  test_export_dispatch.py  test_exporters.py  test_exporters_post.py  test_helpers_mask.py  test_helpers_paths.py  test_judge_routing.py  test_knowledge_base.py  test_live_models.py  test_mcp_cli.py  test_mcp_handlers.py  test_mcp_server.py  test_memory.py  test_memory_dedup.py  test_planner_parser.py  test_provider_base.py  test_provider_plugins.py  test_ranking.py  test_report_exit.py  test_reporter_chains.py  test_reporter_dedup.py  test_reporter_ranking.py  (+22 more)
(+7 files in other folders)
